0.05 2013-04-08
        - Raised max_redirections to 10.

0.04 2013-04-07
        - Added headers to get_xrd().

0.03 2013-04-06
        - Added get_xrd() method.
        - Update dependency.

0.02 2013-03-28
        - Improved documentation.
	- Small code improvements.

0.01 2013-03-27
        - Separation from Sojolicious package.
        - Initial submission to GitHub.
        - Initial submission to CPAN.