@@ -1,5 +1,6 @@
 0.05 2013-04-08
         - Raised max_redirections to 10.
+	- Lowerded connect_timeout to 7.
 
 0.04 2013-04-07
         - Added headers to get_xrd().
